--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,33 @@
 /* You can add global styles to this file, and also import other style files */
+// Color variables
+$primry: #7c4dff;
+$secondary: #333;
+$light: rgba(51, 51, 51, 0.6);
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+// some Common Classes
+
+@mixin flex {
+  display: flex;
+  align-items: center;
+}
+
+.centerMid {
+  @include flex;
+  justify-content: center;
+}
+
+.leftmid {
+  @include flex;
+  justify-content: left;
+}
+
+.rightMid {
+  @include flex;
+  justify-content: right;
+}
