--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,9 +4,10 @@
             마이페이지
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#">전체</a>
+          <a class="dropdown-item" href="#">강아지</a>
+          <a class="dropdown-item" href="#">고양이</a>
+          <a class="dropdown-item" href="#">기타</a>
         </div>
     </div>
     <div class="icon-container">
