--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -8,6 +8,7 @@
     background-color: $white;
     padding: 20px;
     transition: 0.5s;
+    z-index: 1000;
     .user{
         .userIcon{
     width: 50px;
