--- a/src/app/bottombar/bottombar.component.scss
+++ b/src/app/bottombar/bottombar.component.scss
@@ -1,6 +1,31 @@
+@import './src/styles.scss';
+
 .bottomBar{
     width: 100%;
     position: fixed;
     bottom: 0;
     left: 0;
+    background-color: $white;
+    padding: 10px;
+    height: 70px;
+
+    a{
+        text-decoration: none;
+        color: $primry;
+
+        &:focus{
+            color: $secondary;
+        }
+    }
+}
+
+.dropdown{
+    position: fixed;
+    right: 16px;
+    bottom: 75px;
+
+    i{
+        font-size: 52px;
+        color: $primry;
+    }
 }
