--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 $primry: #7c4dff;
 $secondary: #333;
 $light: rgba(51, 51, 51, 0.6);
+$light-grey: #dfdfdf;
 $white: #ffffff;
 
 * {
@@ -31,4 +32,9 @@ $white: #ffffff;
 .rightMid {
   @include flex;
   justify-content: right;
+}
+
+
+.btn{
+  font-size: 11px;
 }
