Create edit profile component

--- a/src/app/bottombar/bottombar.component.scss
+++ b/src/app/bottombar/bottombar.component.scss
@@ -11,7 +11,7 @@
 
     a{
         text-decoration: none;
-        color: $primry;
+        color: $primary;
 
         &:focus{
             color: $secondary;
@@ -26,6 +26,6 @@
 
     i{
         font-size: 52px;
-        color: $primry;
+        color: $primary;
     }
 }
