--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,8 @@
     </div>
     <div class="icon-container">
         <a href="#" class="mr-3"><img src="./assets/translate_black_24dp.png" alt=""></a>
-        <a href="#" (click)="myfunction()"><img src="./assets/menu_black_24dp.svg" alt=""></a>       
+        <a (click)="myfunction()"><img src="./assets/menu_black_24dp.svg" alt=""></a>       
         <a href="#" class="ml-3"><img src="./assets/notifications_none_black_24dp.svg" alt=""></a>
     </div>
   </nav>
+  <app-sidebar [class.active]="check"></app-sidebar>
