--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,11 +1,16 @@
 @import './src/styles.scss';
 
 .dropdown-toggle{
-    color: $primry;
+    color: $primary;
 }
 
 .addbuttton{
     position: fixed;
     right: 10px;
     bottom: 75px;
+}
+
+app-sidebar.active{
+    display: none;
+    transition: 0.5s;
 }
