--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -10,6 +10,9 @@
     transition: 0.5s;
     z-index: 1000;
     .user{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         .userIcon{
     width: 50px;
     height: 50px;
@@ -34,24 +37,6 @@
                 color: $light
             }
         }
-    }
-
-}
-
-.active{
-    width: 0;
-    padding: 0;
-
-    .user{
-        display: none;
-    }
-    
-    .subCatgory{
-        display: none;        
-    }
-
-    ul{
-        display: none;
     }
 
 }
