--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 // Color variables
-$primry: #7c4dff;
+$primary: #7c4dff;
 $secondary: #333;
 $light: rgba(51, 51, 51, 0.6);
 $light-grey: #dfdfdf;
@@ -37,4 +37,11 @@ $white: #ffffff;
 
 .btn{
   font-size: 11px;
+}
+
+.btn-purple-filled{
+  background-color: $primary;
+  color: $white;
+  width: 100%;
+  padding: 10px;
 }
