--- a/src/app/profile/edit-profile/edit-profile.component.html
+++ b/src/app/profile/edit-profile/edit-profile.component.html
@@ -1,23 +1,24 @@
 <div class="container">
-    <div class="row backward">
-        <div class="col-12 p-3">
-            <span><i class="fa-solid fa-angle-left"></i></span> <span class="font-weight-bold ml-3">{{ChangeProfile}}</span>
-        </div>
+  <div class="row backward">
+    <div class="col-12 p-3">
+      <span><i class="fa-solid fa-angle-left"></i></span>
+      <span class="font-weight-bold ml-3">{{ ChangeProfile }}</span>
     </div>
-    <div class="row profile">
-<div class="col-12 centerMid">
-    <div class="imageContaine">
-        <img src="./assets/user-avatar-filled.svg" alt="">
+  </div>
+  <div class="row profile">
+    <div class="col-12 centerMid">
+      <div class="imageContaine">
+        <img src="./assets/user-avatar-filled.svg" alt="" />
         <i class="fa-solid fa-pen centerMid"></i>
+      </div>
     </div>
-</div>
-<div class="col-12">
-    <div class="profileNmae p-2">
-    <span><input type="text"></span>
+    <div class="col-12">
+      <div class="profileNmae p-2">
+        <span><input type="text" /></span>
+      </div>
     </div>
-</div>
-<div class="col-12 p-3">
-    <button class="btn btn-purple-filled">저장</button>
-</div>
-</div>
+    <div class="col-12 p-3">
+      <button class="btn btn-purple-filled">저장</button>
+    </div>
+  </div>
 </div>
