--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,106 +1,90 @@
- <div class="navigation">
-    <div class="user">
-        <div>
-            <span class="userIcon">
-    <img src="./assets/user-avatar-filled.svg" alt="">
-            </span>
-            <span class="userName">
-                앱활동
-            </span>
-        </div>
-        <div>
-            <span><a routerLink="editProfile"><i class="fa-solid fa-angle-right"></i></a></span>
-        </div>
+<div class="navigation">
+  <div class="user">
+    <div>
+      <span class="userIcon">
+        <img src="./assets/user-avatar-filled.svg" alt="" />
+      </span>
+      <span class="userName"> 앱활동 </span>
     </div>
-    <ul>
+    <div>
+      <span
+        ><a routerLink="editProfile"><i class="fa-solid fa-angle-right"></i></a
+      ></span>
+    </div>
+  </div>
+  <ul>
     <div class="subCatgory">
-        <span>앱활동</span>
+      <span>앱활동</span>
     </div>
     <li>
-        <a href="#">
-            <span class="icon">
-                <i class="fa-regular fa-heart"></i>
-            </span>
-            <span class="title">
-                관심목록
-            </span>
-        </a>
+      <a href="#">
+        <span class="icon">
+          <i class="fa-regular fa-heart"></i>
+        </span>
+        <span class="title"> 관심목록 </span>
+      </a>
     </li>
     <li>
-        <a href="#">
-            <span class="icon">
-                <i class="fa-solid fa-pen"></i>
-            </span>
-            <span class="title">
-                내가 작성한 게시글
-            </span>
-        </a>
+      <a href="#">
+        <span class="icon">
+          <i class="fa-solid fa-pen"></i>
+        </span>
+        <span class="title"> 내가 작성한 게시글 </span>
+      </a>
     </li>
     <div class="subCatgory">
-        <span>고객센터</span>
+      <span>고객센터</span>
     </div>
     <li>
-        <a href="#">
-            <span class="icon">
-                <i class="fa-regular fa-circle-question"></i>
-            </span>
-            <span class="title">
-                1:1 문의
-            </span>
-        </a>
+      <a href="#">
+        <span class="icon">
+          <i class="fa-regular fa-circle-question"></i>
+        </span>
+        <span class="title"> 1:1 문의 </span>
+      </a>
     </li>
     <li>
-        <a href="#">
-            <span class="icon">
-                <i class="fa-regular fa-message-captions"></i>
-            </span>
-            <span class="title">
-                FAQ
-            </span>
-        </a>
+      <a href="#">
+        <span class="icon">
+          <i class="fa-regular fa-message-captions"></i>
+        </span>
+        <span class="title"> FAQ </span>
+      </a>
     </li>
     <div class="subCatgory">
-        <span>앱정보</span>
+      <span>앱정보</span>
     </div>
     <li>
-        <a href="#">
-            <span class="icon">
-                <i class="fa-solid fa-bullhorn"></i>
-            </span>
-            <span class="title">
-                공지사항
-            </span>
-        </a>
+      <a href="#">
+        <span class="icon">
+          <i class="fa-solid fa-bullhorn"></i>
+        </span>
+        <span class="title"> 공지사항 </span>
+      </a>
     </li>
     <li>
-        <a href="#">
-            <span class="icon">
-                <i class="fa-solid fa-pen"></i>
-            </span>
-            <span class="title">
-                이용약관
-            </span>
-        </a>
+      <a href="#">
+        <span class="icon">
+          <i class="fa-solid fa-pen"></i>
+        </span>
+        <span class="title"> 이용약관 </span>
+      </a>
     </li>
     <li>
-        <a href="#">
-            <span class="icon">
-                <i class="fa-solid fa-shield"></i>
-            </span>
-            <span class="title">
-                개인정보처리방침
-            </span>
-        </a>
+      <a href="#">
+        <span class="icon">
+          <i class="fa-solid fa-shield"></i>
+        </span>
+        <span class="title"> 개인정보처리방침 </span>
+      </a>
     </li>
     <li>
-        <a href="#">
-            <span class="icon">
-                <i class="fa-solid fa-circle-info"></i>
-            </span>
-            <span class="title">
-                버전
-            </span>
-        </a>
+      <a href="#">
+        <span class="icon">
+          <i class="fa-solid fa-circle-info"></i>
+        </span>
+        <span class="title"> 버전 </span>
+      </a>
     </li>
-</ul>
+  </ul>
 </div>
