--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,85 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
-    <div class="dropdown">
-        <button class="btn dropdown-toggle font-weight-bold" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">
-            마이페이지
+  <div class="dropdown">
+    <button
+      class="btn dropdown-toggle font-weight-bold"
+      type="button"
+      id="dropdownMenuButton"
+      data-toggle="dropdown"
+      aria-expanded="false"
+    >
+      마이페이지
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item" href="#">전체</a>
+      <a class="dropdown-item" href="#">강아지</a>
+      <a class="dropdown-item" href="#">고양이</a>
+      <a class="dropdown-item" href="#">기타</a>
+    </div>
+  </div>
+  <div class="icon-container">
+    <a data-toggle="modal" data-target=".bd-example-modal-sm" class="mr-3"
+      ><img src="./assets/translate_black_24dp.png" alt=""
+    /></a>
+    <a (click)="myfunction()"
+      ><img src="./assets/menu_black_24dp.svg" alt=""
+    /></a>
+    <a routerLink="notification" class="ml-3"
+      ><img src="./assets/notifications_none_black_24dp.svg" alt=""
+    /></a>
+  </div>
+</nav>
+<app-sidebar [class.active]="check"></app-sidebar>
+
+<div
+  class="modal fade bd-example-modal-sm"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="mySmallModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="titleConainer px-4 py-2">
+        <h5 class="modal-title">언어변경</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
         </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="#">전체</a>
-          <a class="dropdown-item" href="#">강아지</a>
-          <a class="dropdown-item" href="#">고양이</a>
-          <a class="dropdown-item" href="#">기타</a>
+      </div>
+      <div class="modal-body p-4">
+        <div class="py-4">
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="exampleRadios"
+              id="exampleRadios1"
+              value="option1"
+              checked
+            />
+            <label class="form-check-label mx-4" for="exampleRadios1">
+              한국어
+            </label>
+          </div>
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="radio"
+              name="exampleRadios"
+              id="exampleRadios2"
+              value="option2"
+            />
+            <label class="form-check-label mx-4" for="exampleRadios2">
+              English
+            </label>
+          </div>
         </div>
+        <button class="btn btn-purple-filled text-center">적용하기</button>
+      </div>
     </div>
-    <div class="icon-container">
-        <a href="#" class="mr-3"><img src="./assets/translate_black_24dp.png" alt=""></a>
-        <a (click)="myfunction()"><img src="./assets/menu_black_24dp.svg" alt=""></a>       
-        <a href="#" class="ml-3"><img src="./assets/notifications_none_black_24dp.svg" alt=""></a>
-    </div>
-  </nav>
-  <app-sidebar [class.active]="check"></app-sidebar>
+  </div>
+</div>
