--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,16 +1,38 @@
-@import './src/styles.scss';
+@import "./src/styles.scss";
 
-.dropdown-toggle{
-    color: $primary;
+.dropdown-toggle {
+  color: $primary;
 }
 
-.addbuttton{
-    position: fixed;
-    right: 10px;
-    bottom: 75px;
+.addbuttton {
+  position: fixed;
+  right: 10px;
+  bottom: 75px;
 }
 
-app-sidebar.active{
-    display: none;
-    transition: 0.5s;
+app-sidebar.active {
+  display: none;
+  transition: 0.5s;
+}
+
+.titleConainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-dialog {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10040;
+  overflow: auto;
+  overflow-y: auto;
+}
+
+.modal-body {
+  input {
+    margin-right: 10px;
+  }
 }
