--- a/src/app/profile/edit-profile/edit-profile.component.scss
+++ b/src/app/profile/edit-profile/edit-profile.component.scss
@@ -1,36 +1,35 @@
-@import './src/styles.scss';
+@import "./src/styles.scss";
 
-.profile{
-    // width: 100%;
-    height: 500px;
+.profile {
+  // width: 100%;
+  height: 500px;
 
-    .imageContaine{
-width: 117px;
-height: 117px;
-position: relative;
-        img{
-            width: 100%;
-        }
-
-        i{
-            width: 30px;
-            height: 30px;            
-            border-radius: 50%;
-            background-color: $primary;
-            color: $white;
-position: absolute;
-bottom: 10px;
-right:10px
-        }
+  .imageContaine {
+    width: 117px;
+    height: 117px;
+    position: relative;
+    img {
+      width: 100%;
     }
 
-    .profileNmae{
-        input{
-            border: none;
-            border-bottom: 1px solid $light-grey;
-            outline: none;
-            width: 100%;
-        }
+    i {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      background-color: $primary;
+      color: $white;
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
     }
+  }
 
+  .profileNmae {
+    input {
+      border: none;
+      border-bottom: 1px solid $light-grey;
+      outline: none;
+      width: 100%;
+    }
+  }
 }
