--- a/src/app/layout/components/bottombar/bottombar.component.html
+++ b/src/app/layout/components/bottombar/bottombar.component.html
@@ -5,25 +5,22 @@
 <div class="bottomBar text-center">
     <div class="row">
         <div class="col-4">
-            <a [routerLink]="['/main']">
+            <a (click)="navigateTo('main')">
                 <div class="icon"><i class="fa-solid fa-house"></i></div>
                 <div class="text">메인</div>
             </a>
         </div>
         <div class="col-4">
-            <a routerLink="community">
+            <a (click)="navigateTo('community')">
             <div class="icon">  <i class="fa-solid fa-file-lines"></i></div>
             <div class="text">게시판</div>
             </a>
         </div>
         <div class="col-4">
-            <a routerLink="mypage">
+            <a (click)="navigateTo('profile')">
             <div class="icon"><i class="fa-solid fa-user"></i></div>
             <div class="text">마이페이지</div>
             </a>
         </div>
     </div>
 </div>
-
-
-<router-outlet></router-outlet>
