--- a/src/app/layout/@tabs/tabs.component.html
+++ b/src/app/layout/@tabs/tabs.component.html
@@ -1,19 +1,16 @@
 <ion-tabs>
-    <ion-tab-bar slot="bottom" color="primary">
+    <ion-tab-bar slot="bottom">
         <ion-tab-button tab="main">
             <ion-icon name="person-circle-outline"></ion-icon>
             <ion-label>Main</ion-label>
         </ion-tab-button>
-
         <ion-tab-button tab="community">
             <ion-icon name="easel-outline"></ion-icon>
             <ion-label>Community</ion-label>
         </ion-tab-button>
-
         <ion-tab-button tab="profile">
             <ion-icon name="settings-outline"></ion-icon>
             <ion-label>Profile</ion-label>
         </ion-tab-button>
     </ion-tab-bar>
-
 </ion-tabs>
