--- a/src/app/modules/main/pages/products/products.component.html
+++ b/src/app/modules/main/pages/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container ion-page">
     <div class="row product">
         <div class="col-12">
             <div class="row">
@@ -8,7 +8,7 @@
                 <div class="col-8">
                     <div class="row">
                         <div class="col-6">
-                            <button class="btn btn-round btn-grey">자랑하기</button>
+                            <button class="btn btn-round btn-grey" (click)="onClickShowOff()">자랑하기</button>
                         </div>
                         <div class="col-6 text-right">
                             <span class="p-1"><i class="fa-regular fa-heart"></i></span>
@@ -17,7 +17,7 @@
                             <span class="p-1 pr-3">2</span>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row" (click)="onClickDetail()">
                         <div class="col-12 font-weight-bold">
                             캣타워 팔아요
                         </div>
