chore: navigate pages in ionic modal

--- a/src/app/layout/@tabs/tabs.component.html
+++ b/src/app/layout/@tabs/tabs.component.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-    <ion-tab-bar slot="bottom">
+    <ion-tab-bar slot="bottom" translucent>
         <ion-tab-button tab="main">
             <ion-icon name="person-circle-outline"></ion-icon>
             <ion-label>Main</ion-label>
