--- a/src/app/modules/community/pages/community/community.component.html
+++ b/src/app/modules/community/pages/community/community.component.html
@@ -1,1 +1,5 @@
-<p>community works!</p>
+<ion-content fullscreen>
+    <div class="container bg-danger">
+    <p>community works!</p>
+    </div>
+</ion-content>
