--- a/src/app/modules/main/pages/detail/detail.page.html
+++ b/src/app/modules/main/pages/detail/detail.page.html
@@ -1,5 +1,6 @@
-<div class="ion-page bg-white">
+<ion-content fullscreen>
     <div class="row">
         <span (click)="onClickGoBack()">go back</span>
+        <span (click)="onClickNavigate()">navigate to test</span>
     </div>
-</div>
+</ion-content>
