chore: refactor code

--- a/src/app/modules/main/pages/test/test.page.html
+++ b/src/app/modules/main/pages/test/test.page.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-toolbar>
         <ion-back-button slot="start" *ngIf="level > 0"></ion-back-button>
-        <ion-title>My Modal Level: {{ level }}</ion-title>
+        <ion-title>Modal Level: {{ level }}</ion-title>
         <ion-buttons slot="end">
             <ion-button (click)="dismissModal()">
                 <ion-icon slot="icon-only" name="close"></ion-icon>
@@ -13,7 +13,7 @@
 <ion-content>
     TEST
     TEST
-    TESTr
+    TEST
     <!-- Open another modal from code -->
     <ion-button expand="full" color="secondary" (click)="goForward()">
         <ion-icon name="arrow-forward" slot="end"></ion-icon>
