--- a/src/app/bottombar/bottombar.component.scss
+++ b/src/app/bottombar/bottombar.component.scss
@@ -24,8 +24,25 @@
   right: 16px;
   bottom: 75px;
 
-  i {
-    font-size: 52px;
-    color: $primary;
+  a {
+    text-decoration: none;
+    i {
+      width: 50px;
+      height: 50px;
+      font-size: 30px;
+      color: $white;
+      background-color: $primary;
+      border-radius: 50%;
+    }
   }
+
+  .dropdown-toggle::after {
+    display: none;
+  }
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:focus,
+.navbar-default .navbar-nav > .open > a:hover {
+  color: #555;
+  background-color: #e7e7e7;
 }
