Create product component

--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -1,19 +1,9 @@
 @import "./src/styles.scss";
 
-.product {
-  padding: 20px 0;
-  overflow-y: scroll;
-}
-
-.btn-round {
-  border-radius: 20px;
-  padding: 3px 10px;
-}
-
-.btn-grey {
-  border: 2px solid $light-grey;
-}
-
-.btn-purple {
-  border: 2px solid $primary;
+.profile {
+  img {
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+  }
 }
