--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,76 +1,44 @@
 <div class="container">
-  <div class="row product">
-    <div class="col-12">
-      <div class="row">
-        <div class="col-4 centerMid">
-          <img src="./assets/product_profile.png" alt="" />
-        </div>
-        <div class="col-8">
-          <div class="row">
-            <div class="col-6">
-              <button class="btn btn-round btn-grey">자랑하기</button>
-            </div>
-            <div class="col-6 text-right">
-              <span class="p-1"><i class="fa-regular fa-heart"></i></span>
-              <span class="p-1">2</span>
-              <span class="p-1"><i class="fa-regular fa-message"></i></span>
-              <span class="p-1 pr-3">2</span>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12 font-weight-bold">캣타워 팔아요</div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <span class="pr-2">컨댕이</span> <span class="pr-2">|</span>
-              <span class="pr-2">2021.10.20</span>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <span class="font-weight-bold mr-4">80,000원</span>
-              <button class="btn btn-round btn-purple">거래진행중</button>
-            </div>
-          </div>
-        </div>
-      </div>
+  <div class="row py-2">
+    <div class="col-6">
+      <a routerLink="/main"><i class="fa-solid fa-angle-left"></i></a>
+    </div>
+    <div class="col-6 text-right">
+      <i class="fa-solid fa-share-nodes mr-4"></i>
+      <i class="fa-solid fa-ellipsis-vertical"></i>
     </div>
   </div>
-  <div class="row product">
+  <div class="row py-3">
     <div class="col-12">
-      <div class="row">
-        <div class="col-4 centerMid">
-          <img src="./assets/dog_profile.png" alt="" />
-        </div>
-        <div class="col-8">
-          <div class="row">
-            <div class="col-6">
-              <button class="btn btn-round btn-grey">자랑하기</button>
-            </div>
-            <div class="col-6 text-right">
-              <span class="p-1"><i class="fa-regular fa-heart"></i></span>
-              <span class="p-1">2</span>
-              <span class="p-1"><i class="fa-regular fa-message"></i></span>
-              <span class="p-1 pr-3">2</span>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12 font-weight-bold">캣타워 팔아요</div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <span class="pr-2">컨댕이</span> <span class="pr-2">|</span>
-              <span class="pr-2">2021.10.20</span>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <span class="font-weight-bold mr-4">80,000원</span>
-              <button class="btn btn-round btn-purple">거래진행중</button>
-            </div>
-          </div>
-        </div>
-      </div>
+      <img src="./assets/product_profile.png" alt="" class="w-100" />
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12 profile">
+      <img src="./assets/product_profile.png" alt="" class="mr-3" />
+      <span class="font-weight-bold"> 토끼냥 </span>
+    </div>
+  </div>
+  <hr />
+  <div class="row">
+    <div class="col-6">
+      <span class="mr-4">고양이</span><span>2021.11.20</span>
+    </div>
+    <div class="col-6 text-right">
+      <button class="btn btn-round btn-purple">거래진행중</button>
+    </div>
+  </div>
+  <div class="row py-3">
+    <div class="col-12">
+      <p class="font-weight-bold mb-0">
+        고양이 용품 이거씀고양이 용품 이거씀고양이 용품 이거씀 고양이 용품
+        이거씀
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <span class="mr-4">고양이</span><span>2021.11.20</span>
     </div>
   </div>
 </div>
