create wWrite post components

--- a/src/app/bottombar/bottombar.component.html
+++ b/src/app/bottombar/bottombar.component.html
@@ -9,10 +9,15 @@
   ></a>
 
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" routerLink="main">전체</a>
-    <a class="dropdown-item" routerLink="dog">강아지</a>
-    <a class="dropdown-item" routerLink="cat">고양이</a>
-    <a class="dropdown-item" routerLink="etc">기타</a>
+    <a class="dropdown-item" routerLink="writedogpost"
+      ><img src="./assets/dogIcon.svg" alt="" /> 강아지 게시글 작성</a
+    >
+    <a class="dropdown-item" routerLink="writecatpost"
+      ><img src="./assets/catIcon.svg" alt="" /> 고양이 게시글 작성</a
+    >
+    <a class="dropdown-item" routerLink="writeetcpost"
+      ><img src="./assets/etcIcon.svg" alt="" /> 기타 게시글 작성</a
+    >
   </div>
 </div>
 
