--- a/src/app/bottombar/bottombar.component.html
+++ b/src/app/bottombar/bottombar.component.html
@@ -10,13 +10,13 @@
 
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <a class="dropdown-item" routerLink="writedogpost"
-      ><img src="./assets/dogIcon.svg" alt="" /> 강아지 게시글 작성</a
+      ><img src="./assets/dogIcon.svg" alt="" /> {{ listTags.list[0].name }}</a
     >
     <a class="dropdown-item" routerLink="writecatpost"
-      ><img src="./assets/catIcon.svg" alt="" /> 고양이 게시글 작성</a
+      ><img src="./assets/catIcon.svg" alt="" /> {{ listTags.list[1].name }}</a
     >
     <a class="dropdown-item" routerLink="writeetcpost"
-      ><img src="./assets/etcIcon.svg" alt="" /> 기타 게시글 작성</a
+      ><img src="./assets/etcIcon.svg" alt="" /> {{ listTags.list[2].name }}</a
     >
   </div>
 </div>
