--- a/src/app/profile/edit-profile/edit-profile.component.scss
+++ b/src/app/profile/edit-profile/edit-profile.component.scss
@@ -9,7 +9,9 @@
     height: 117px;
     position: relative;
     img {
-      width: 100%;
+      width: 117px;
+      height: 117px;
+      border-radius: 50%;
     }
 
     i {
@@ -21,6 +23,11 @@
       position: absolute;
       bottom: 10px;
       right: 10px;
+    }
+
+    input {
+      visibility: hidden;
+      width: 20px;
     }
   }
 
