--- a/src/app/write-post/write-etc-post/write-etc-post.component.html
+++ b/src/app/write-post/write-etc-post/write-etc-post.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 p-3">
       <a routerLink="/main"
         ><i class="fa-solid fa-angle-left"></i>
-        <span class="font-weight-bold ml-3">고양이 게시글 작성</span></a
+        <span class="font-weight-bold ml-3">기타 게시글 작성</span></a
       >
     </div>
   </div>
