--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -10,7 +10,9 @@
         <div class="col-8">
           <div class="row">
             <div class="col-5">
-              <button class="btn btn-round btn-grey">{{ content.category }}</button>
+              <button class="btn btn-round btn-grey">
+                {{ content.category }}
+              </button>
             </div>
             <div class="col-7 text-right">
               <span class="p-1"><i class="fa-regular fa-heart"></i></span>
@@ -24,8 +26,11 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <span class="pr-2">{{ content.author.name }}</span> <span class="pr-2">|</span>
-              <span class="pr-2">{{ content.postedAt | date: 'yyyy.MM.dd'  }}</span>
+              <span class="pr-2">{{ content.author.name }}</span>
+              <span class="pr-2">|</span>
+              <span class="pr-2">{{
+                content.postedAt | date: "yyyy.MM.dd"
+              }}</span>
             </div>
           </div>
           <div class="row">
@@ -38,7 +43,7 @@
       </div>
     </div>
   </div>
-  <div class="row product" *ngFor="let item of items">
+  <!-- <div class="row product" *ngFor="let item of items">
     <div class="col-12">
       <div class="row">
         <div class="col-4 centerMid">
@@ -76,7 +81,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- <div class="row product">
     <div class="col-12">
       <div class="row">
