feat: register device

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
+<pets-loader></pets-loader>
 <app-navbar (onLanguagechange)="onLanguageValueReceived($event)"></app-navbar>
 <app-bottombar [language]="changesLanguage"></app-bottombar>
