--- a/src/app/write-post/write-dogpost/write-dogpost.component.scss
+++ b/src/app/write-post/write-dogpost/write-dogpost.component.scss
@@ -6,3 +6,29 @@
   text-decoration: none;
   color: $light;
 }
+
+.titleConainer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.modal-dialog {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 10040;
+  overflow: auto;
+  overflow-y: auto;
+}
+
+.fileUpload {
+  width: 50px;
+  height: 50px;
+  border: 2px solid $light;
+  border-radius: 10px;
+  display: inline-block;
+  @include flex;
+  justify-content: center;
+}
