Work on Product page

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -17,6 +17,7 @@
     <div class="row">
       <div class="col-12 profile">
         <img src="./assets/product_profile.png" alt="" class="mr-3" />
+        <!-- <span class="font-weight-bold"> {{ content.text }} </span> -->
         <span class="font-weight-bold"> {{ content.text }} </span>
       </div>
     </div>
