--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container bg-light">
   <div class="row py-2">
     <div class="col-6">
       <a routerLink="/main"><i class="fa-solid fa-angle-left"></i></a>
@@ -8,23 +8,30 @@
       <i class="fa-solid fa-ellipsis-vertical"></i>
     </div>
   </div>
-  <div *ngFor="let content of fetchedContents">
+  <div *ngFor="let productData of fetchedContents">
+    <!-- <div> -->
     <div class="row py-3">
       <div class="col-12">
-        <img [src]="content.images[0] || DEFAULT_IMAGE" alt="" class="w-100" />
+        <img
+          [src]="productData.images[0] || DEFAULT_IMAGE"
+          alt=""
+          class="w-100"
+        />
+        <!-- <img src="./assets/product_profile.png" alt="" class="w-100" /> -->
       </div>
     </div>
     <div class="row">
       <div class="col-12 profile">
         <img src="./assets/product_profile.png" alt="" class="mr-3" />
-        <!-- <span class="font-weight-bold"> {{ content.text }} </span> -->
-        <span class="font-weight-bold"> {{ content.text }} </span>
+        <span class="font-weight-bold"> {{ productData.author.name }} </span>
+        <span class="font-weight-bold">{{ productData.category }} </span>
       </div>
     </div>
     <hr />
     <div class="row">
       <div class="col-6">
-        <span class="mr-4">고양이</span><span>2021.11.20</span>
+        <span class="mr-4">고양이</span
+        ><span>{{ productData.postedAt | date: "yyyy.MM.dd" }}</span>
       </div>
       <div class="col-6 text-right">
         <button class="btn btn-round btn-purple">거래진행중</button>
@@ -33,14 +40,47 @@
     <div class="row py-3">
       <div class="col-12">
         <p class="font-weight-bold mb-0">
-          고양이 용품 이거씀고양이 용품 이거씀고양이 용품 이거씀 고양이 용품
-          이거씀
+          {{ productData.text }}
         </p>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <span class="mr-4">고양이</span><span>2021.11.20</span>
+      </div>
+    </div>
+  </div>
+  <div class="suggessions">
+    <div class="suggessionsBox">
+      <div class="boxTitle">
+        <p class="font-weight-bold">이 회원님의 게시글 (12)</p>
+      </div>
+      <div class="viewMore">
+        <p>더보기</p>
+      </div>
+    </div>
+    <div class="suggessionCard">
+      <div class="row">
+        <div class="col-6">
+          <img src="./assets/product_profile.png" alt="" class="w-100" />
+          <div class="desc">고양이 용품 판매합니다. 모…</div>
+          <div class="price">50,000원</div>
+        </div>
+        <div class="col-6">
+          <img src="./assets/product_profile.png" alt="" class="w-100" />
+          <div class="desc">고양이 용품 판매합니다. 모…</div>
+          <div class="price">50,000원</div>
+        </div>
+        <div class="col-6">
+          <img src="./assets/product_profile.png" alt="" class="w-100" />
+          <div class="desc">고양이 용품 판매합니다. 모…</div>
+          <div class="price">50,000원</div>
+        </div>
+        <div class="col-6">
+          <img src="./assets/product_profile.png" alt="" class="w-100" />
+          <div class="desc">고양이 용품 판매합니다. 모…</div>
+          <div class="price">50,000원</div>
+        </div>
       </div>
     </div>
   </div>
