--- a/src/app/products/products.component.scss
+++ b/src/app/products/products.component.scss
@@ -7,3 +7,17 @@
     height: 36px;
   }
 }
+
+.suggessions {
+  margin: 30px 0;
+  background-color: $white;
+  padding: 10px;
+  .suggessionsBox {
+    @include flex;
+    justify-content: space-between;
+  }
+
+  .suggessionCard {
+    padding: 10px;
+  }
+}
